# nextexpress

./: .dockerignore  .gitignore  AGENTS.md  COMMAND_PARITY.md  Makefile  README.md  SCREENS.md  SLICES.md  SYSTEM.md  nextexpress.toml
rust/: Cargo.toml  build.rs
rust/src/: bootstrap.rs  lib.rs  main.rs
rust/src/adapters/: file_conference_repository.rs  file_mail_store.rs  file_screen_repository.rs  in_memory_caller_log.rs  in_memory_file_repository.rs  in_memory_flagged_store.rs  in_memory_mail_stores.rs  in_memory_user_repository.rs  mod.rs  pbkdf2_password_hasher.rs  sqlite_flagged_store.rs  sqlite_user_repository.rs  system_clock.rs  telnet_line.rs  telnet_listener.rs  user_repository_contract.rs
rust/src/adapters/telnet_listener/: mod.rs  tests.rs
rust/src/app/: clock.rs  colour_terminal.rs  config.rs  config_loader.rs  input_limits.rs  login_flow.rs  mail_scan_on_join.rs  mail_stores.rs  menu_command.rs  menu_flow.rs  mod.rs  node_pool.rs  password_reset_flow.rs  registration_flow.rs  runtime.rs  screens.rs  seed.rs  services.rs  session_driver.rs  session_flow.rs  session_presenter.rs  session_terminal.rs  terminal.rs  typed_session.rs  wire_text.rs  yes_no.rs
rust/src/app/login_flow/: tests.rs
rust/src/app/menu/: join.rs  list_mail.rs  mod.rs  post_mail.rs  read_mail.rs  reply_forward.rs  scan_all_mail.rs  scan_mail.rs  sysop_admin.rs
rust/src/app/menu_command/: files.rs  join.rs  mail.rs
rust/src/app/menu_flow/: conf_flags.rs  join.rs  list_messages.rs  mail_text.rs  (+12 more)
rust/src/domain/: bytes.rs  caller_log.rs  conference.rs  conference_flags.rs  conference_repository.rs  conference_visit.rs  config.rs  mail.rs  mail_store.rs  mod.rs  node.rs  node_pool.rs  password.rs  post_comment_to_sysop.rs  post_mail.rs  read_mail.rs  scan_mail.rs  session.rs  session_policy.rs  user.rs  user_repository.rs
rust/tests/: architecture.rs  cf_conference_flags_smoke.rs  confnav_smoke.rs  logon_conference_scan_smoke.rs  phase1_smoke.rs  phase4_smoke.rs  phase6_smoke.rs  phase7_smoke.rs  phase8_smoke.rs  quickwins_smoke.rs  session_signal_smoke.rs  sqlite_user_storage_smoke.rs  tierb_mail_scan_smoke.rs  tierb_read_subprompt_smoke.rs  tierd_file_list_smoke.rs  tierd_fs_smoke.rs  tierd_newfiles_smoke.rs  two_session_logons_smoke.rs
rust/tests/support/: mod.rs
(+255 files in other folders)
