[package]
name = "nextexpress"
version = "0.1.0"
edition = "2021"
description = "A Rust port of the AmiExpress BBS system."
license = "MIT"
publish = false

[lib]
name = "nextexpress"
path = "src/lib.rs"

[[bin]]
name = "nextexpress"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "sync", "net", "io-util", "time", "fs"] }
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
sha2 = "0.10"
rand = "0.8"
hex = "0.4"

[dev-dependencies]
tempfile = "3.10"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
