[package]
name = "nextexpress"
version = "0.1.0"
edition = "2021"
description = "A Rust port of the AmiExpress BBS system."
license = "MIT"
publish = false

[lib]
name = "nextexpress"
path = "src/lib.rs"

[[bin]]
name = "nextexpress"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "sync", "net", "io-util", "time", "fs"] }
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", default-features = false, features = ["std", "serde", "serde-well-known", "formatting", "parsing", "macros"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }
thiserror = "2"
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tempfile = "3.10"

[profile.mutants]
inherits = "test"
debug = "none"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
